--- a/index.html
+++ b/index.html
@@ -2,9 +2,199 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Service page</title>
+    <link rel="stylesheet" href="services.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Noto+Sans&family=Urbanist:wght@400;500;600&display=swap" rel="stylesheet">
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
   </head>
   <body>
-    <h1>hello</h1>
+
+<!-- test nav end -->
+<header>
+ <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light bg-light " data-bs-theme="light" >
+  <div class="container-fluid">
+
+    <div style="margin-left:80px;" class="d-flex">
+      <img class="img-fluid" src="images/Logo without BG.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <div class="logo-container">
+         <img src="images/logo with no bg 2.png" alt="Logo" width="100%" height="auto">
+      </div>
+    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div style="margin-left:160px"class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <button style="background-color:#F97C45; text-decoration: none; color:black; border: none;" type="button" class="btn btn-primary"><a href="contact.html" style="color: inherit; text-decoration: none;">Contact Us</a></button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+    </header>
+
+<!-- intro section -->
+
+<div class="letstalk_section container-fluid">
+  <div class="row">
+    <div class="col-md-10 col-11 mx-auto">
+      <h3 class="mb-2 text-light text_h6">Unleash the Full potential of Your <br> Business with our exceptional <br> and Tailor-Made IT-Solution.</h3>
+      <button type="button" class="btn btn-outline-light">Let's talk</button>
+    </div>
+  </div>
+</div>
+<!-- services -->
+    <div class="services" style="margin-left: 80px;">
+    <div class="container">
+      <div class="section-title">
+        <h4>Services at Mathlog IT Solutions</h4>
+        <p>At Mathlog IT Solutions, we offer a comprehensive range of cutting-edge IT services tailored to meet the unique requirements of businesses across various industries. Our team of highly skilled professionals is dedicated to empowering your digital transformation and helping you achieve your goals.</p>
+      </div>
+    </div>
+  </div>
+  <!-- End services Section -->
+
+<!-- cards -->
+
+<div class="container">
+  <div style="margin-left:50px;"class="row d-flex justify-content-between">
+    <div class="col-lg-6 mb-4">
+      <div class="card">
+        <img class="card-img-top img-small" src="images/Firmware-amico.png" alt="">
+      </div>
+      <br>
+    <div class="col-md-8">
+     <div class="card-body">
+       <h5 class="card-title"><i class="fi fi-sr-square-1"></i> Custom Software Development </h5>
+       <p class="card-text">Our developers craft tailored software applications that align with your business processes and goals. With high quality and scalability, we streamline operations and enhance your competitive edge.</p>
+     </div>
+   </div>
+      </div>
+    <div class="col-lg-6 mb-4">
+      <div class="card">
+        <img class="card-img-top img-small" src="images/Programmer.png" alt="">
+      </div>
+      <br>
+    <div class="col-md-8">
+     <div class="card-body">
+       <h5 class="card-title"><i class="fi fi-sr-square-2"></i> Web and Mobile App Development </h5>
+       <p class="card-text">We create immersive web and mobile applications to strengthen your online presence. With a focus on user experience, our cutting-edge solutions drive customer engagement and enhance brand visibility.</p>
+     </div>
+   </div>
+    </div>
+  </div>
+</div>
+
+    <div class="container">
+      <div style="margin-left:50px;" class="row d-flex justify-content-between">
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <img class="card-img-top img-small" src="images/Online consulting.png" alt="">
+
+          </div>
+          <br>
+        <div class="col-md-8">
+         <div class="card-body">
+
+           <h5 class="card-title"><i class="fi fi-sr-square-3"></i> IT Consulting and Strategy </h5>
+           <p class="card-text">Our experienced consultants work closely with you to understand your objectives and challenges. We provide guidance to optimize your IT infrastructure, enhance cybersecurity, and align technology with your business goals.</p>
+         </div>
+       </div>
+        </div>
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <img class="card-img-top img-small" src="images/Cloud hosting.png" alt="">
+
+          </div>
+          <br>
+        <div class="col-md-8">
+         <div class="card-body">
+           <h5 class="card-title"><i class="fi fi-sr-square-4"></i> Cloud Computing Solutions</h5>
+           <p class="card-text">Leverage the power of the cloud to revolutionize your operations. Our solutions enable scalability, flexibility, and cost-effectiveness. We handle migration, deployment, and optimization for maximum efficiency and minimal downtime.</p>
+         </div>
+       </div>
+        </div>
+      </div>
+    </div>
+     <!-- test footer -->
+
+
+<div class="container-fluid mt-5">
+  <div style="color:#F97C45" class="divider mb-4"></div>
+</div>
+<div style="margin-left: 50px;" class="container-fluid mt-5">
+  <div class="row mb-4">
+    <div class="col-md-4 col-sm-4 col-xs-4">
+      <div class="footer-text pull-left">
+        <div class="d-flex">
+          <img class="img-fluid" src="images/Logo without BG.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+
+          <div class="logo-container">
+            <img src="images/logo with no bg 2.png" alt="Logo" width="100%" height="auto">
+          </div>
+        </div>
+        <p class="card-text"><b>Address:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+        <p class="card-text"><b>Email:</b> info@mathlog.co.in</p>
+        <p class="card-text"><b>Phone No.:</b> +91 76506 XXXXX</p>
+      </div>
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-2"></div>
+    <div class="col-md-2 col-sm-2 col-xs-2">
+      <ul>
+        <li><a class="footer-link" href="index.html">Home</a></li>
+        <li><a class="footer-link" href="blogs.html">Blogs</a></li>
+        <li><a class="footer-link" href="index.html">Services</a></li>
+        <li><a class="footer-link" href="about.html">About Us</a></li>
+      </ul>
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-2">
+      <img src="images/Map.png" alt="Logo" width="100%" height="auto">
+    </div>
+  </div>
+</div>
+<div class="container-fluid mt-5">
+  <div style="color:#000000" class="divider mb-4"></div>
+</div>
+<div class="row" style="font-size: 10px;">
+  <div class="col-md-6 col-sm-6 col-6">
+    <div class="d-flex align-items-center">
+      <div style="margin-left: 20px;">
+        <p>&copy; 2023 MATHLOG IT SOLUTIONS PRIVATE LIMITED</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 col-sm-6 col-6">
+    <div class="pull-right d-flex policy justify-content-end">
+      <div style="margin-left: 20px;">Privacy Policy</div>
+    </div>
+  </div>
+</div>
+<script  src="//maps.googleapis.com/maps/api/js?key=AIzaSyAtt1z99GtrHZt_IcnK-wryNsQ30A112J0&amp;callback=initMap" async="" defer=""></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
